[package]
name = "hertz-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.8"
futures = "0.3"
bytes = "1.0"
async-trait = "0.1.50"
route-recognizer = "0.2"